<resources>
    <string name="app_name">Dominos Fevahh</string>
    <string name="Continue_Game">Continue Game</string>
    <string name="New_Game">New Game</string>
    <string name="Some_Stats">Some Stats</string>
    <string name="Exit">Exit</string>
    <string name="Exit_qm">Are you sure you want to exit?</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Coming_soon">Coming soon</string>
    <string name="preference_file_key">fr.goui.dominosfevahh.PREFERENCE_FILE_KEY</string>
    <string name="preference_file_pending_game">preference_file_pending_game</string>
    <string name="preference_file_pending_game_number_of_rounds">preference_file_pending_game_number_of_rounds</string>
    <string name="preference_file_pending_game_points_by_round">preference_file_pending_game_points_by_round</string>
    <string name="preference_file_pending_game_number_of_players">preference_file_pending_game_number_of_players</string>
    <string name="preference_file_pending_game_player_name">preference_file_pending_game_player_name</string>
    <string name="preference_file_pending_game_player_points">preference_file_pending_game_player_points</string>
    <string name="preference_file_pending_game_player_rounds">preference_file_pending_game_player_rounds</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="Number_of_Rounds">Number of Rounds</string>
    <string name="Points_by_Round">Points by Round</string>
    <string name="Number_of_players">Number of Players</string>
    <string name="Name">Name</string>
    <string name="Start">Start</string>
    <string name="Quit_qm">Are you sure you want to quit this game and go back to menu?</string>
    <string name="Current_Leader">Current Leader</string>
    <string name="End_round">End round</string>
    <string name="Rounds">Rounds</string>
    <string name="Points">Points</string>
    <string name="Confirm">Confirm</string>
    <string name="Confirm_round">Confirm round</string>
    <string name="Round_won_by_">Round won by %1$s</string>
    <string name="Game_won_by_">Game won by %1$s</string>
</resources>
