<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/menu_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Continue_Game"
        app:layout_constraintBottom_toTopOf="@+id/menu_new_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_title_text_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/menu_new_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/New_Game"
        app:layout_constraintBottom_toTopOf="@+id/menu_stats_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_continue_button" />

    <Button
        android:id="@+id/menu_stats_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Some_Stats"
        app:layout_constraintBottom_toTopOf="@+id/menu_exit_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_new_button" />

    <Button
        android:id="@+id/menu_exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_stats_button" />
</android.support.constraint.ConstraintLayout>
